--- a/src/WellnessPlan.WebApi/WellnessPlan.WebApi.csproj
+++ b/src/WellnessPlan.WebApi/WellnessPlan.WebApi.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\WellnessPlan.ServiceDefaults\WellnessPlan.ServiceDefaults.csproj" />
+    <ProjectReference Include="..\WellnessPlan.Shared\WellnessPlan.Shared.csproj" />
   </ItemGroup>
 
   <ItemGroup>
