--- a/src/WellnessPlan.WebApi/WellnessPlan.WebApi.csproj
+++ b/src/WellnessPlan.WebApi/WellnessPlan.WebApi.csproj
@@ -13,6 +13,8 @@
 
   <ItemGroup>
     <PackageReference Include="Carter" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" />
+    <PackageReference Include="ForEvolve.FluentValidation.AspNetCore.Http" />
   </ItemGroup>
 
 </Project>
