Removed unused files and fixed all issues

--- a/src/WellnessPlan.WebApi/appsettings.Development.json
+++ b/src/WellnessPlan.WebApi/appsettings.Development.json
@@ -1,8 +1,12 @@
 {
+  "ConnectionStrings": {
+    "AdventureWorks": "Server=CIQLAP139\\SQL2022_INSTANCE;Database=AdventureWorks2022;User Id=sa;Password=cloudiq@123;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
