Removed unused files and fixed all issues

--- a/src/WellnessPlan.WebApi/WellnessPlan.WebApi.csproj
+++ b/src/WellnessPlan.WebApi/WellnessPlan.WebApi.csproj
@@ -20,4 +20,10 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Common\Behaviors\" />
+    <Folder Include="Common\Exceptions\" />
+    <Folder Include="Common\Models\" />
+    <Folder Include="Infrastructure\Caching\" />
+  </ItemGroup>
 </Project>
