feat: Implement structured logging with Serilog and Seq
- Add Serilog and Seq integration
- Configure separate logging levels for Development and Production
- Add environment enrichers for better log context
- Disable Application Insights temporarily
- Set up console logging with structured format

--- a/src/WellnessPlan.WebApi/appsettings.json
+++ b/src/WellnessPlan.WebApi/appsettings.json
@@ -8,5 +8,47 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Seq": {
+    "Url": ""
+  },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning",
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj} {Properties:j}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "Seq",
+        "Args": {
+          "serverUrl": "http://localhost:5341",
+          "restrictedToMinimumLevel": "Information"
+        }
+      }
+    ],
+    "Enrich": [
+      "WithMachineName",
+      "WithEnvironmentName",
+      "WithThreadId",
+      "WithProcessId"
+    ],
+    "Properties": {
+      "Application": "WellnessPlan.WebApi",
+      "Environment": "Production"
+    }
+  },
+  "ApplicationInsights": {
+    "EnableAdaptiveSampling": false,
+    "EnablePerformanceCounterCollectionModule": false
+  }
 }
