--- a/src/WellnessPlan.WebApi/WellnessPlan.WebApi.csproj
+++ b/src/WellnessPlan.WebApi/WellnessPlan.WebApi.csproj
@@ -6,6 +6,7 @@
     <PackageReference Include="Carter" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" />
     <PackageReference Include="ForEvolve.FluentValidation.AspNetCore.Http" />
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" />
     <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" />
