--- a/src/WellnessPlan.WebApi/appsettings.Development.json
+++ b/src/WellnessPlan.WebApi/appsettings.Development.json
@@ -8,42 +8,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "Seq": {
-    "Url": "http://localhost:5341"
-  },
-  "Serilog": {
-    "MinimumLevel": {
-      "Default": "Debug",
-      "Override": {
-        "Microsoft": "Debug",
-        "System": "Debug",
-        "Microsoft.AspNetCore": "Debug"
-      }
-    },
-    "WriteTo": [
-      {
-        "Name": "Console",
-        "Args": {
-          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj} {Properties:j}{NewLine}{Exception}"
-        }
-      },
-      {
-        "Name": "Seq",
-        "Args": {
-          "serverUrl": "http://localhost:5341"
-        }
-      }
-    ],
-    "Enrich": [
-      "WithMachineName",
-      "WithEnvironmentName",
-      "WithThreadId",
-      "WithProcessId"
-    ],
-    "Properties": {
-      "Application": "WellnessPlan.WebApi",
-      "Environment": "Development"
-    }
-  }
+  "AllowedHosts": "*"
 }
