--- a/src/WellnessPlan.WebApi/appsettings.json
+++ b/src/WellnessPlan.WebApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=WellnessPlanDb;User Id=your_user;Password=your_password;"
+    "AdventureWorks": "Server=CIQLAP139\\SQL2022_INSTANCE;Database=AdventureWorks2022;User Id=sa;Password=cloudiq@123;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
@@ -8,47 +8,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "Seq": {
-    "Url": ""
-  },
-  "Serilog": {
-    "MinimumLevel": {
-      "Default": "Information",
-      "Override": {
-        "Microsoft": "Warning",
-        "System": "Warning",
-        "Microsoft.AspNetCore": "Warning"
-      }
-    },
-    "WriteTo": [
-      {
-        "Name": "Console",
-        "Args": {
-          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj} {Properties:j}{NewLine}{Exception}"
-        }
-      },
-      {
-        "Name": "Seq",
-        "Args": {
-          "serverUrl": "http://localhost:5341",
-          "restrictedToMinimumLevel": "Information"
-        }
-      }
-    ],
-    "Enrich": [
-      "WithMachineName",
-      "WithEnvironmentName",
-      "WithThreadId",
-      "WithProcessId"
-    ],
-    "Properties": {
-      "Application": "WellnessPlan.WebApi",
-      "Environment": "Production"
-    }
-  },
-  "ApplicationInsights": {
-    "EnableAdaptiveSampling": false,
-    "EnablePerformanceCounterCollectionModule": false
-  }
+  "AllowedHosts": "*"
 }
