Added changes for docket compose

--- a/src/WellnessPlan.WebApi/appsettings.Development.json
+++ b/src/WellnessPlan.WebApi/appsettings.Development.json
@@ -8,5 +8,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Redis": {
+    "ConnectionString": "localhost:6379"
+  },
+  "Seq": {
+    "ServerUrl": "http://localhost:5341"
+  }
 }
